Spacing fixes

--- a/web/app/themes/adbf-railroad/src/styles/components/_cards.scss
+++ b/web/app/themes/adbf-railroad/src/styles/components/_cards.scss
@@ -17,6 +17,11 @@
         display: flex;
         align-items: center;
     }
+
+    // at or above 1200px
+    @include media(">=large") {
+        padding: $gutter-sm;
+    }
 }
 
 // Component Modifiers
