--- a/web/app/themes/adbf-railroad/src/styles/components/_featured-maps.scss
+++ b/web/app/themes/adbf-railroad/src/styles/components/_featured-maps.scss
@@ -9,6 +9,7 @@
 .c-featured-maps {
     display: flex;
     flex-wrap: wrap;
+    gap: $gutter-xs;
 }
 
 // Component Modifiers
@@ -18,12 +19,55 @@
 // =============================================================================
 
 .c-featured-maps__map {
-    flex: 0 0 50%;
-    max-width: 50%;
+    position: relative;
+    flex: 0 1 50%;
+    max-width: calc(50% - #{$gutter-xs / 2});
+
+    // at or above 600px
+    @include media(">=small") {
+        flex-basis: percentage(1/3);
+        max-width: calc(#{percentage(1/3)} - #{$gutter-xs / 4 * 3});
+    }
 
     // at or above 900px
     @include media(">=medium") {
         flex-basis: 25%;
-        max-width: 25%;
+        max-width: calc(25% - #{$gutter-xs * 3 / 4});
+    }
+
+    .c-media {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+.c-featured-maps__link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    // right: 0;
+    display: flex;
+    align-items: flex-end;
+    width: 100%;
+    height: 100%;
+    transition: background-image $speed-reveal $bezier-slide;
+    background-image: linear-gradient(to bottom, transparent 0, fade-out($black, 0.2) 100%);
+
+    &::before,
+    &::after {
+        display: none !important;
+    }
+
+    @include u-hocus {
+        background-image: linear-gradient(to bottom, fade-out($black, 0.2) 50%, fade-out($black, 0.2) 100%);
+    }
+
+    .c-link__text {
+        margin-left: 0.5em;
+        margin-bottom: 0.5em;
+        color: $white;
     }
 }
