--- a/web/app/themes/adbf-railroad/src/styles/objects/_footer.scss
+++ b/web/app/themes/adbf-railroad/src/styles/objects/_footer.scss
@@ -15,6 +15,15 @@
     @include media(">=small") {
         text-align: left;
     }
+
+    .c-link {
+        &::before {
+            background-color: $dark;
+        }
+        &::after {
+            background-color: $white;
+        }
+    }
 }
 
 // Object modifiers
@@ -27,6 +36,7 @@
     @include media(">=small") {
         padding-top: $gutter-xs;
         display: flex;
+        flex-wrap: wrap;
         align-items: flex-start;
         column-gap: 1em;
     }
@@ -66,14 +76,21 @@
 
     // at or above 600px
     @include media(">=small") {
-        flex: 0 1 percentage(1/3);
-        max-width: percentage(1/3);
-        margin: 8px 0 0;
+        flex: 0 0 100%;
+        margin: 0 auto $gutter-xs;
+
+        .-svg {
+            max-width: 500px;
+        }
     }
 
     // at or above 900px
     @include media(">=medium") {
+        flex-basis: percentage(1/3);
         max-width: 25%;
+        margin-top: 8px;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
