--- a/web/app/themes/adbf-railroad/src/styles/objects/_header.scss
+++ b/web/app/themes/adbf-railroad/src/styles/objects/_header.scss
@@ -18,7 +18,6 @@
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        border-bottom: 0;
     }
 }
 
